--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,42 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
+                tools:context=".MainUI"
+                style="@style/BaseUIRootLayout">
 
-	<TextView
-		android:text="@string/hello_world"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"/>
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_layout"/>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar">
+
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/images_list"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_margin="@dimen/image_list_margin"-->
+            <!--android:scrollbars="none" />-->
+
+        <!--<moviecam.ragnarok.ui.CircularRevealMaskView-->
+            <!--android:id="@+id/revealView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
+
+        <ImageButton
+            android:id="@+id/create"
+            android:layout_width="@dimen/fab_size"
+            android:layout_height="@dimen/fab_size"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="@dimen/fab_bottom_margin"
+            android:layout_marginRight="@dimen/fab_right_margin"
+            android:background="@drawable/fab_background"
+            android:elevation="@dimen/fab_elevation"
+            android:scaleType="centerInside"
+            android:src="@drawable/plus" />
+
+    </RelativeLayout>
 </RelativeLayout>
