--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,12 @@
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar">
 
-        <!--<android.support.v7.widget.RecyclerView-->
-            <!--android:id="@+id/images_list"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_margin="@dimen/image_list_margin"-->
-            <!--android:scrollbars="none" />-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/images_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/image_list_margin"
+            android:scrollbars="none" />
 
         <!--<moviecam.ragnarok.ui.CircularRevealMaskView-->
             <!--android:id="@+id/revealView"-->
