--- a/app/src/main/res/layout/image_item_layout.xml
+++ b/app/src/main/res/layout/image_item_layout.xml
@@ -9,8 +9,8 @@
                                     card_view:cardBackgroundColor="@color/accent_color"
                                     card_view:cardElevation="10dp"
                                     android:id="@+id/image_cardview"
-                                    android:foreground="?android:attr/selectableItemBackground"
-                                    android:clickable="true">
+                                    android:clickable="true"
+                                    android:foreground="?android:attr/selectableItemBackground">
 
 	<ImageView
 		android:layout_width="match_parent"
@@ -18,7 +18,8 @@
 		android:layout_gravity="center"
 		android:scaleType="centerInside"
 		android:src="@drawable/testimg"
-		android:id="@+id/image"/>
+		android:id="@+id/image"
+		android:focusable="false"/>
 
 
 </android.support.v7.widget.CardView>
